 - UWM_GETCTOOLBAR returns the CWnd* for any object inherited from CToolBar


Changes in detail
-----------------
Added CCommonDialog 			class
Added CColorDialog  			class
Added CFindReplaceDialog 		class
Added CFontDialog 				class
Added CPageSetupDialog 			class
Added CPrinDialog 				class
Added GetAppDataPath            function
Added CFrame::GetInitValues		member function
Added CFrame::SetInitValues		member function
Added UWM_GETCWND 				window message.
Added UWM_GETCFRAME 			window message.
Added UWM_GETCMDIFRAME 			window message.
Added UWM_GETCDOCKER 			window message.
Added UWM_GETCDOCKCONTAINER 	window message.
Added UWM_GETCTABBEDMDI 		window message.
Added UWM_GETCTOOLBAR 			window message.

Modified CWinThread::GetMainWnd				now returns HWND
Modified CWinThread::SetMainWnd				now accepts HWND
Modified CWinThread::GetAcceleratorWindow 	now returns HWND
Modified CWinThread::SetAccelerators		now accepts HWND

Renamed CWinThread::GetAccelerators to CWinThread::GetAcceleratorTable

Removed CFrame::GetShowCmd
Removed CFrame::GetShowStatusBar
Removed CFrame::GetShowToolBar
Removed CFrame::SetShowCmd
Removed CFile::OpenFileDialog
Removed CFile::SaveFileDialog
Removed CException::ReportError
Removed UWM_ISDOCKER		 	window message.
Removed UWM_ISDOCKCONTAINER	 	window message.
Removed UWM_ISFRAME			 	window message.
Removed UWM_ISMDIFRAME		 	window message.
Removed UWM_ISTABBEDMDI		 	window message.
Removed UWM_ISTOOLBAR		 	window message.

The following functions are now public:
CWinApp::GetCWndFromMap
CWinApp::GetTlsData
CWinApp::SetTlsData

Moved The "New Project" folder to samples


Version 8.1
===========

Important
---------
The definition of the following virtual functions have changed. You will 
need to update your code as accordingly. The current definitions are:
- CWnd::OnCreate(CREATESTRUCT& cs)
- CWnd::PreTranslateMessage(MSG& Msg)
- CThread::PreTranslateMessage(MSG& Msg)
Also: